@@ -56,204 +56,6 @@ extern int LCF;
 extern int LRV;
 #endif
 
-/* 
- * m_chghost - 12/07/1999 (two months after I made SETIDENT) - Stskeeps
- * :prefix CHGHOST <nick> <new hostname>
- * parv[0] - sender
- * parv[1] - nickname
- * parv[2] - hostname
- *
-*/
-
-int m_chghost(aClient *cptr, aClient *sptr, int parc, char *parv[])
-{
-	aClient *acptr;
-	char *s;
-	int  legalhost = 1;
-
-#ifdef DISABLE_USERMOD
-	if (MyClient(sptr))
-	{
-		sendto_one(sptr, ":%s NOTICE %s :*** The /chghost command is disabled on this server", me.name, sptr->name);
-		return 0;
-	}
-#endif
-
-	if (MyClient(sptr))
-		if (!IsAnOper(sptr))
-		{
-			sendto_one(sptr, err_str(ERR_NOPRIVILEGES), me.name,
-			    parv[0]);
-			return 0;
-
-		}
-
-	if (parc < 3)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** /ChgHost syntax is /ChgHost <nick> <newhost>",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	if (strlen(parv[2]) < 1)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** Write atleast something to change the host to!",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	if (strlen(parv[2]) > (HOSTLEN))
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** ChgHost Error: Too long hostname!!",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	/* illegal?! */
-	for (s = parv[2]; *s; s++)
-	{
-		if (!isallowed(*s))
-		{
-			legalhost = 0;
-		}
-	}
-
-	if (legalhost == 0)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** /ChgHost Error: A hostname may contain a-z, A-Z, 0-9, '-' & '.' - Please only use them",
-		    me.name, parv[0]);
-		return 0;
-	}
-
-	if ((acptr = find_person(parv[1], NULL)))
-	{
-		if (!IsULine(sptr))
-		{
-			sendto_umode(UMODE_EYES,
-			    "%s changed the virtual hostname of %s (%s@%s) to be %s",
-			    sptr->name, acptr->name, acptr->user->username,
-			    acptr->user->realhost, parv[2]);
-		}
-		acptr->umodes |= UMODE_HIDE;
-		acptr->umodes |= UMODE_SETHOST;
-		sendto_serv_butone_token(cptr, sptr->name,
-		    MSG_CHGHOST, TOK_CHGHOST, "%s %s", acptr->name, parv[2]);
-		if (acptr->user->virthost)
-			MyFree(acptr->user->virthost);
-		acptr->user->virthost = MyMalloc(strlen(parv[2]) + 1);
-		ircsprintf(acptr->user->virthost, "%s", parv[2]);
-		return 0;
-	}
-	else
-	{
-		sendto_one(sptr, err_str(ERR_NOSUCHNICK), me.name, sptr->name,
-		    parv[1]);
-		return 0;
-	}
-	return 0;
-}
-
-/* 
- * m_chgident - 12/07/1999 (two months after I made SETIDENT) - Stskeeps
- * :prefix CHGHOST <nick> <new identname>
- * parv[0] - sender
- * parv[1] - nickname
- * parv[2] - identname
- *
-*/
-
-int m_chgident(aClient *cptr, aClient *sptr, int parc, char *parv[])
-{
-	aClient *acptr;
-	char *s;
-	int  legalident = 1;
-
-#ifdef DISABLE_USERMOD
-	if (MyClient(sptr))
-	{
-		sendto_one(sptr, ":%s NOTICE %s :*** The /chgident command is disabled on this server", me.name, sptr->name);
-		return 0;
-	}
-#endif
-
-	if (MyClient(sptr))
-		if (!IsAnOper(sptr))
-		{
-			sendto_one(sptr, err_str(ERR_NOPRIVILEGES), me.name,
-			    parv[0]);
-			return 0;
-
-		}
-
-	if (parc < 3)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** /ChgIdent syntax is /ChgIdent <nick> <newident>",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	if (strlen(parv[2]) < 1)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** Write atleast something to change the ident to!",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	if (strlen(parv[2]) > (USERLEN))
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** ChgIdent Error: Too long ident!!",
-		    me.name, sptr->name);
-		return 0;
-	}
-
-	/* illegal?! */
-	for (s = parv[2]; *s; s++)
-	{
-		if (!isallowed(*s))
-		{
-			legalident = 0;
-		}
-	}
-
-	if (legalident == 0)
-	{
-		sendto_one(sptr,
-		    ":%s NOTICE %s :*** /ChgIdent Error: A ident may contain a-z, A-Z, 0-9, '-' & '.' - Please only use them",
-		    me.name, parv[0]);
-		return 0;
-	}
-
-	if ((acptr = find_person(parv[1], NULL)))
-	{
-		if (!IsULine(sptr))
-		{
-			sendto_umode(UMODE_EYES,
-			    "%s changed the virtual ident of %s (%s@%s) to be %s",
-			    sptr->name, acptr->name, acptr->user->username,
-			    (acptr->umodes & UMODE_HIDE ? acptr->
-			    user->realhost : acptr->user->realhost), parv[2]);
-		}
-		sendto_serv_butone_token(cptr, sptr->name,
-		    MSG_CHGIDENT,
-		    TOK_CHGIDENT, "%s %s", acptr->name, parv[2]);
-		ircsprintf(acptr->user->username, "%s", parv[2]);
-		return 0;
-	}
-	else
-	{
-		sendto_one(sptr, err_str(ERR_NOSUCHNICK), me.name, sptr->name,
-		    parv[1]);
-		return 0;
-	}
-	return 0;
-}
 
 /* m_setident - 12/05/1999 - Stskeeps
  *  :prefix SETIDENT newident
